@@ -53,8 +53,6 @@ along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.  */
 #define DATA_START 0x10000000
 #define DATA_SEG_BITS	0x10000000
 
-#undef LIBS_MACHINE
-#define LIBS_MACHINE
 #define LIBS_DEBUG
 
 /* Use terminfo instead of termcap.  */
